# Rust-MongoDB-Rocket

./: Cargo.toml  Rocket.toml
src/: db.rs  delete.rs  get.rs  main.rs  update.rs
