[package]
name = "rust_mongo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = {version = "1.2.0", features = ["sync"], default-features = false}
tokio = { version = "0.2", features = ["full"] }
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = "1.0.127"